# work_toolkit

./: .gitignore  LICENSE  README.md  mail_utils.py  pdf_operations.py  pdf_utils.py  pyproject.toml
src/: main.py
src/tools/: pdf_utils.py  ppt_utils.py
worktoolkit/: __main__.py
worktoolkit/tools/: csv_utils.py  excel_utils.py  hash_utils.py  json_utils.py  pdf_utils.py  qrcode_utils.py
